provider delete
